<!--
  ~ Copyright (C) 2017 JoongAng Control, Inc - All Rights Reserved
  ~ Unauthorized copying of this file, via any medium is strictly prohibited
  ~ Proprietary and confidential
  ~ Written by Sungchul Choi <scchoi@joas.co.kr>, 17. 12. 20 오전 10:19
  ~
  -->

<resources>
    <string name="app_name">OCPP</string>
    <string name="title_activity_slow_iotvideo">MainActivity</string>
    <string name="title_name">Smart EV Charger</string>
    <string name="company_name">JoongAng Control</string>
    <string name="string_btype">B-Type</string>
    <string name="string_ctype">C-Type</string>
    <string name="string_authwait">User authorization is in progress. Please wait.</string>
    <string name="string_cardtag">Please tag your membership card.</string>
    <string name="string_home">Home</string>
    <string name="string_connector_wait">Waiting for charging connector to be connected.</string>
    <string name="string_conector_begin_charging">Charging begins when the connector is connected to the vehicle.</string>
    <string name="string_select_charging_method">Please select the charging method</string>
    <string name="string_charging">Charging</string>
    <string name="string_charge_amount">Charge amount:</string>
    <string name="string_charging_time">Charging time:</string>
    <string name="string_time_remain">Time remaining:</string>
    <string name="string_finish_charging">Finish</string>
    <string name="title_finish_charging">Charging Finished</string>
    <string name="sub_title_finish_charging">"Charging has finished.\nRemove the connector."</string>
    <string name="string_save">Save</string>
    <string name="string_hide_kbd">Hide KBD</string>
    <string name="string_basicset">BASICSET</string>
    <string name="string_input_admin_password">Input Admin Password</string>
    <string name="string_password_incorrect">Password is incorrect.</string>
    <string name="string_comm_monitor">CommMNT</string>
    <string name="string_hide">Hide</string>
    <string name="string_connect_car_wait">Waiting for connecting to car</string>
    <string name="string_finish_app">FinishApp</string>
    <string name="string_clear">Clear</string>
    <string name="string_charging_cost">Charging cost:</string>
    <string name="string_ac3">AC3</string>
    <string name="string_dcchademo">DC CHAdeMO</string>
    <string name="string_dccombo">DC COMBO</string>
    <string name="string_charging_start">Start Charging</string>
    <string name="string_remote_started">Remote Started</string>

    <string name="faultstr_406_inp_stack_overtemp">Input stack overheat</string>
    <string name="faultstr_406_diaode_stack_overtemp">Diaode stack overheat</string>
    <string name="faultstr_406_out_stack_overtemp">Output stack overheat</string>
    <string name="faultstr_406_trans_overtemp">Transmitter/Reactor overheat</string>
    <string name="faultstr_406_emergency_button">Emergency button pressed</string>
    <string name="faultstr_406_coupler_lock_err">Charging coupler lock error</string>
    <string name="faultstr_406_pilot_signal_err">Pilot signal error</string>
    <string name="faultstr_406_out_fuse_err">Output fuse status error</string>
    <string name="faultstr_406_mc_err">MC error</string>
    <string name="faultstr_406_line_insulation_err">Line insulation error</string>
    <string name="faultstr_406_plc_comm_err">PLC communication error</string>
    <string name="faultstr_406_dclink_overvoltage">DC link overvoltage</string>
    <string name="faultstr_406_dclink_lowvoltage">DC link low voltage</string>
    <string name="faultstr_406_inp_a_overcurrent">Input A phase overcurrent</string>
    <string name="faultstr_406_inp_b_overcurrent">Input B phase overcurrent</string>
    <string name="faultstr_406_charging_system_err">Charging system error</string>

    <string name="faultstr_407_car_batt_overvoltage">Car battery overvoltage</string>
    <string name="faultstr_407_car_batt_lowvoltage">Car battery lowvoltage</string>
    <string name="faultstr_407_ct1_overcurrent">CT1 overcurrent</string>
    <string name="faultstr_407_ct2_overcurrent">CT2 overcurrent</string>
    <string name="faultstr_407_ct3_overcurrent">CT3 overcurrent</string>
    <string name="faultstr_407_ct4_overcurrent">CT4 overcurrent</string>
    <string name="faultstr_407_ct5_overcurrent">CT5 overcurrent</string>
    <string name="faultstr_407_gate_driver_u_err">Gate driver U error</string>
    <string name="faultstr_407_gate_driver_v_err">Gate driver V error</string>
    <string name="faultstr_407_gate_driver_w_err">Gate driver W error</string>
    <string name="faultstr_407_gate_driver_p_err">Gate driver P error</string>
    <string name="faultstr_407_gate_driver_n_err">Gate driver N error</string>
    <string name="faultstr_407_gate_driver_err">Gate driver error</string>
    <string name="faultstr_407_board_inp_voltage_15vd_err">Board input voltage error(+15VD)</string>
    <string name="faultstr_407_board_inp_voltage_15v_err">Board input voltage error(+15V)</string>

    <string name="faultstr_408_board_inp_voltage_24v_err">Board input voltage error(+24V)</string>
    <string name="faultstr_408_board_inp_voltage_n15v_err">Board input voltage error(-15V)</string>
    <string name="faultstr_408_out_overvoltage_combo">Output overvoltage error(DC Combo)</string>
    <string name="faultstr_408_inp_freq_error">Input power frequency error</string>
    <string name="faultstr_408_charging_current_gap_error">Charging current gap error(negotiation failed)</string>
    <string name="faultstr_408_charging_voltage_gap_error">Charging voltage range/gap error(negotiation failed)</string>
    <string name="faultstr_408_charging_system_compatibility_err">Charging system compatibility error(negotiation failed)</string>
    <string name="faultstr_408_inp_lowvoltage_vab">Input low voltage error(Vab). Main power breaker activated</string>
    <string name="faultstr_408_inp_lowvoltage_vbc">Input low voltage error(Vbc)</string>
    <string name="faultstr_408_vd_error">Vd error</string>
    <string name="faultstr_408_plus_vq_error">+Vq error</string>
    <string name="faultstr_408_minus_vq_error">-Vq error</string>
    <string name="faultstr_408_car_battery_temp_error">Car battery temperature error(negotiation failed)</string>
    <string name="faultstr_408_overvoltage">Overvoltage</string>
    <string name="faultstr_408_out_overvoltage_chademo">Output overvoltage error(Chademo)</string>

    <string name="faultstr_409_chademo_relay_fusion">Chademo output relay fusion</string>
    <string name="faultstr_409_combo_relay_fusion">DC Combo output relay fusion</string>
    <string name="faultstr_409_ui_dsp_comm_err">UI-DSP Communication error</string>
    <string name="faultstr_409_charger_car_comm_err">Communication error between Charger and car(negotiation failed)</string>
    <string name="faultstr_409_control_board_err">Control board error</string>
    <string name="faultstr_409_inp_overvoltage_vbc">Input overvoltage(Vbc)</string>
    <string name="faultstr_409_module_err_1">Module error #1</string>
    <string name="faultstr_409_overcurrent">Overcurrent</string>
    <string name="faultstr_409_precharge_1">Pre-charge error #1</string>
    <string name="faultstr_409_precharge_2">Pre-charge error #2</string>
    <string name="faultstr_409_precharging_err">Pre-charging error</string>
    <string name="faultstr_409_module_err_2">Module error #2</string>
    <string name="faultstr_409_combo_connector_overtemp">DC Combo connector over temperature</string>
    <string name="faultstr_409_combo_connector_lock">DC Combo connector lock error</string>
    <string name="faultstr_409_module_err_3">Module error #3</string>
    <string name="faultstr_409_module_err_4">Module error #4</string>

    <string name="faultstr_416_emergency_bt">Emergency button</string>
    <string name="faultstr_416_car_battery_system_err">Car battery system error(negotiation failed)</string>
    <string name="faultstr_416_rcd_off">Breaker(RCD) OFF</string>
    <string name="faultstr_416_temperature_err">Temperature error</string>
    <string name="faultstr_416_out_overcurrent">Output overcurrent(Iout)</string>
    <string name="faultstr_416_main_breaker">Main power breaker activated</string>
    <string name="faultstr_416_mc_fusion">MC fusion</string>
    <string name="faultstr_416_cp_fail">CP fail</string>
    <string name="faultstr_416_car_gear_stat">Car gear(P) status error(negotiation failed)</string>
    <string name="faultstr_416_can_comm_err">CAN communication error</string>
    <string name="faultstr_416_meter_comm_err">Meter communication error</string>
    <string name="faultstr_416_dsp_eim_comm_err">DSP-EIM communication error</string>
    <string name="faultstr_416_module_control_comm_err">Communication error between Charging module and control board</string>
    <string name="faultstr_416_bms_voltage_err">BMS voltage error</string>
    <string name="faultstr_416_car_bms_err">Car status/BMS error</string>
    <string name="faultstr_416_internal_voltage_test_err">Charger internal voltage test error</string>

    <string name="string_emergency_title">Release Emergency Button</string>
    <string name="string_fault_title">Fault occured!</string>
    <string name="str_tag_finish_charging">Tag the card to finish charging</string>
    <string name="str_auth_fail_title">Authentication failed</string>
    <string name="str_auth_fail_content">"Card verification failed.\n
Please check and try again"</string>
    <string name="str_hard_reset_title">Hard Reset</string>
    <string name="str_hard_reset_content">Rebooting will proceed because of remote reset command.</string>
    <string name="str_soft_reset_title">Soft Reset</string>
    <string name="str_soft_reset_content">It is initialized by remote Soft Reset command</string>
    <string name="string_dsp_comm_err">Communication error between UI and control(DSP) board</string>
    <string name="string_charge_finishing">Charging is stopping.\n
Please wait a moment.</string>
    <string name="string_unavailable">Charger is not available by Central System.</string>
    <string name="string_reserved">Reserved</string>
    <string name="str_auth_fail_content_reserved">Card is not reserved.\n
Please check and try again</string>
    <string name="str_rfid_request_not_ready">Another channel is waiting for RFID. Please try again after a while.</string>
    <string name="str_notice">Notice</string>
    <string name="str_bt_stop_charging">Stop</string>
    <string name="str_bt_cancel">Cancel</string>

</resources>
